mods/stun/web/css/stun-chatbox.css
.saito-overlay-closebox {
  right: 1rem;
  width: 3rem;
  height: 3rem;
  top: 1rem;
}

.saito-overlay-closebox-btn {
  width: 3rem;
  height: 3rem;
  font-size: 3rem;
}
.stunx-chatbox {
  top: 0 !important;
  left: 0 !important;
  width: 100vw;
  background-color: var(--saito-white) fff;
  position: fixed;
  z-index: 20;
  transition: all 0.2s;
}

.stunx-chatbox.minimize:hover {
  cursor: pointer;
}

.stunx-chatbox .minimizer {
  position: absolute;
  right: 3rem;
  top: 0rem;
  z-index: 2;
}

.stunx-chatbox .minimizer i {
  font-size: 4rem;
  color: var(--saito-white);
  transition: all 0.2s;
}

@keyframes minimize {
  100% {
    position: absolute;
    opacity: 0.8;
    transform: translate(-40%, 90%) translate(0, -50%) scale(0.2);
  }
}

.minimize {
  animation-name: minimize;
  animation-duration: 1s;
  animation-fill-mode: forwards;
}

.stunx-chatbox .minimizer i:hover {
  color: var(--saito-primary);
  transform: scale(1.1);
  cursor: pointer;
}

.stunx-chatbox main {
  width: 100vw;
  height: 100vh;
}

.stunx-chatbox .heading {
  padding: 1rem;
}

.stunx-chatbox .large-wrapper {
  grid-gap: 1rem;
  /* padding: 1rem; */
  height: 80vh;
  background: black;
}

.stunx-chatbox .footer {
  height: 20%;
}

.stunx-chatbox .video-container-large {
  display: flex;
  width: 100%;
  height: 100%;
  cursor: pointer;
  transition: all 0.5s ease;
  position: relative;
}
.expanded-video {
  width: 75%;
  height: 100%;
  margin-right: 10px;
}

.expanded-video .video-box-container-large {
  width: 100%;
  opacity: 0;
  opacity: 0;
  animation: fade-in 0.5s ease-in;
  animation-fill-mode: forwards;
  border: 2px solid var(--saito-primary);
}

@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.stunx-chatbox .side-videos {
  display: flex;
  flex-direction: column;
  width: 25%;
  height: 100%;
}

.side-videos .video-box-container-large {
  height: 30%;

  border: 2px solid var(--saito-secondary);
}

.stunx-chatbox .video-box-container-large {
  border-radius: .5rem;
}

#localStream {
  display: block;
}

.stunx-chatbox .b-btngrid {
  border: none;
  margin-left: 1rem;
  margin-top: 250px;
  width: 160px;
  height: 38px;
  border-radius: 4px;
  left: 51px;
  cursor: pointer;
}

.stunx-chatbox .heading {
  background: linear-gradient(96.79deg, #f30c4f 0%, #f8c062 91.87%);
}

/* video chat */

.lds-dual-ring {
  display: inline-block;
}

.lds-dual-ring:after {
  content: " ";
  display: block;
  width: 10px;
  height: 10px;
  margin: 8px;
  border-radius: 50%;
  border: 6px solid var(--saito-white);
  border-color: var(--saito-white) transparent var(--saito-white) transparent;
  animation: lds-dual-ring 1.2s linear infinite;
}

@keyframes lds-dual-ring {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

@keyframes glow {
  0% {
    transform: scale(0.97);
  }

  50% {
    transform: scale(1);
  }

  75% {
    transform: scale(0.97);
  }

  100% {
    transform: scale(0.97);
  }
}

/*  video box */
.video-box-container-large {
  background-color: black;
  display: flex;
  height: 100%;
  resize: both;
  overflow: auto;
  justify-content: center;
  align-items: center;
  color: var(--saito-white);
  position: relative;
}

.video-box-container-large video {
  width: 100%;
  height: 100%;
  z-index: 2;
  transform: rotateY(180deg);
  border-radius: 0.1rem;
  object-fit: cover;
  border: none;
}

.video-box-container-large > #connection-message {
  color: var(--saito-white);
  width: 50%;
  line-height: 1.5;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 10;
}

#reconnect-button {
  color: var(--saito-white);
  /* width: 50%; */
  line-height: 1.5;
  position: absolute;
  /* display: flex; */
  align-items: center;
  justify-content: center;
  z-index: 10;
  position: absolute;
  bottom: 0;
  right: 0;
  opacity: 0;
}

#reconnect-button button {
  background: var(--saito-primary);
  text-align: center;
  padding: 1rem 1.5rem;
  text-align: center;
  letter-spacing: 1px;
  color: var(--saito-white);
  font-weight: 500;
  font-size: 1.2rem;
  border-radius: 0.5rem;
  min-width: 0;
  cursor: pointer;
  border: 1px solid transparent;
}
.video-box-container-large > #connection-message > p {
  color: var(--saito-white);
  font-size: 2.8rem;
}

 .video-call-info {
  color: var(--saito-white);
  line-height: 1.5;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  left: 1rem;
  font-size: 1rem;
  bottom: 0;
  z-index: 2;
}

 .video-call-info > p {
  color: #ffffff69;
  font-size: 2rem;
  white-space: nowrap; 
  overflow: hidden; 
  text-overflow: ellipsis; 
  margin-right: 1rem;
}

 .video-call-info i {
  font-size: 2rem;
  margin-right: 1rem;
}

.video-box-container-large canvas {
  /* position: absolute;
  height: 100%;
  width: 100%; */
}

.lds-dual-ring {
  display: inline-block;
}

.lds-dual-ring:after {
  content: " ";
  display: block;
  width: 10px;
  height: 10px;
  margin: 8px;
  border-radius: 50%;
  border: 6px solid var(--saito-white);
  border-color: var(--saito-white) transparent var(--saito-white) transparent;
  animation: lds-dual-ring 1.2s linear infinite;
}

.ls-dual-ring2 {
  display: inline-block;
}

.lds-dual-ring2:after {
  content: " ";
  display: block;
  width: 10px;
  height: 10px;
  /* margin: 8px; */
  border-radius: 50%;
  border: 6px solid var(--saito-white);
  border-color: var(--saito-white) transparent var(--saito-white) transparent;
  animation: lds-dual-ring 1.2s linear infinite;
}

/*  Add users */
.add-users-container {
  min-width: 0;
  width: 50rem;
}

.add-users-header {
  font-size: 1.7rem;
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.add-users-code-container {
  padding: 1rem;
  border-radius: 0.5rem;
  background-color: var(--saito-white);
  color: var(--saito-font-color);
  font-size: 1.6rem;
  display: flex;
  width: 55%;
  justify-content: space-between;
}

.add-users-code-container i {
  cursor: pointer;
}
/* ... */

